Revert last commit because they are query parameters not body params
Fix operation ID
